JK-1367: lazy member-manifest parsing and deterministic labels in ModuleSelection
Path/glob selectors resolve against path aliases without parsing member
manifests; name aliases load once, on demand, when a token misses. Alias
sets keep insertion order so 'known:' error labels are stable across runs.